<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="new_version">发现新版本</string>
    <string name="updating">正在更新</string>
    <string name="update_cancel">取消更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍后再说</string>
    <string name="download_network_change">当前为非WiFi环境，将使用手机流量进行下载，是否继续？</string>
    <string name="cancel">取消</string>
    <string name="go_on">继续</string>
    <string name="complite">完成</string>

    <string name="app_name">豚鼠手环</string>

    <string name="input_password_again">请再次输入密码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="tel">手机</string>
    <string name="email_box">邮箱</string>
    <string name="input_email">请输入邮箱</string>
    <string name="password_inconsistent">输入的密码不一致</string>
    <string name="please_read_treaty">请先阅读并接受《豚鼠科技服务协议条款》</string>
    <string name="email_fail">邮箱格式错误</string>
    <string name="register_agree">我已阅读并接受</string>
    <string name="remeber_pwd">想起来了</string>

    <string name="input_tel_email">手机号/邮箱</string>
    <string name="input_verification">验证码</string>
    <string name="input_password">密码</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="register">注册</string>
    <string name="next">下一步</string>
    <string name="input_tel">手机号</string>
    <string name="affirm_password">确认密码</string>
    <string name="send_verification">获取验证码</string>
    <string name="register_account">立即注册</string>
    <string name="register_email_account">使用邮箱注册</string>
    <string name="seconds">秒</string>
    <string name="input_tel_flase">输入的手机号码不正确</string>
    <string name="input_tel_none">手机号码</string>
    <string name="treaty">《豚鼠科技用户协议》</string>

    <string name="send_success">发送成功</string>
    <string name="login_title">登录</string>
    <string name="join_cavytech">加入豚鼠</string>
    <string name="login_btn_text">登录</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="please_input_correct_code">请输入正确的验证码</string>
    <string name="please_input_correct_password">请输入正确的密码</string>
    <string name="password_error">密码错误</string>
    <string name="verification_error">验证码错误</string>
    <string name="please_input_password">密码不能为空</string>
    <string name="please_input_account">登录账号不能为空</string>
    <string name="account_error">登录账号格式错误</string>
    <string name="search_error">输入格式有误</string>
    <string name="password_length">密码长度不得少于6位</string>

    <string name="network_not_available">当前网络不可用</string>
    <string name="network_connection">请检查网络连接</string>
    <string name="guide_setting_tips">准确填写，健康监测更精确!</string>
    <string name="sex_tips">我是</string>
    <string name="birthday_tips">生日</string>
    <string name="height_tips">身高</string>
    <string name="about_version">检查更新</string>
    <string name="about_function">功能介绍</string>
    <string name="about_into">进入官网</string>
    <string name="weight_tips">体重</string>
    <string name="target_tips">目标</string>
    <string name="location_tips">开启位置共享</string>
    <string name="playband_tips">开启手环</string>

    <string name="title_mymessage">我的信息</string>
    <string name="title_setting">设置</string>
    <string name="title_next">跳过</string>
    <string name="title_connect_band">绑定手环</string>
    <string name="Help_and_feedback">帮助与反馈</string>
    <string name="target">目标</string>
    <string name="information">信息公开</string>
    <string name="friend">好友</string>
    <string name="pk">PK</string>
    <string name="about">关于</string>
    <string name="relatve_App">体感应用</string>
    <string name="step">步</string>
    <string name="average">平均</string>
    <string name="recommend">推荐</string>
    <string name="walk_step">运动步数</string>
    <string name="sleeping">睡眠</string>
    <string name="title_account">账户信息</string>
    <string name="sex">性别</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="address">城市</string>
    <string name="achievement">成就</string>
    <string name="step_total">您已累计行走</string>
    <string name="step_total2">已累计行走</string>
    <string name="grand_total">累计</string>
    <string name="exit_account">退出账号</string>
    <string name="message_public">信息公开</string>
    <string name="swipe_tv_order">#b3000000</string>
    <string name="swipe_tv_name">#000000</string>
    <string name="add_friend">添加好友</string>
    <string name="new_friend">新的朋友</string>
    <string name="life_cavy">生活豚鼠</string>
    <string name="search">搜索</string>
    <string name="pull_refrsh__list_button_text">添加</string>
    <string name="pull_refrsh__list_new_friend_button_text">同意</string>
    <string name="search_hint">输入要搜索的内容</string>
    <string name="yanzheng">发送验证申请，等对方通过</string>
    <string name="send_test">发送</string>

    <string name="openwear">连接手环</string>
    <string name="openwear_tips1">按下手环按钮，连接手环</string>
    <string name="openwear_tips2">没有灯？充电试试看</string>
    <string name="connecting">正在连接...</string>
    <string name="pairsucess">绑定成功</string>
    <string name="startband">开始健康之旅吧!</string>
    <string name="pairfail">绑定失败</string>
    <string name="pairfailtips">确保手环有电，并且位于手机的连接范围内</string>
    <string name="text_first_name">计步</string>
    <string name="text_first_pk">PK</string>
    <string name="text_first_sleep">睡眠</string>
    <string name="text_first_health">健康</string>
    <string name="text_first_success">成就</string>
    <string name="control_camera">遥控相机</string>
    <string name="remind">来电提醒</string>
    <string name="safe">紧急求救</string>
    <string name="update_rom">固件升级</string>
    <string name="band_new_cavy">绑定新的豚鼠手环</string>
    <string name="notice_colock">手环振动唤醒，远离传统闹铃噪声</string>
    <string name="know_clock">手环闹钟</string>
    <string name="know_clock_weak">智能唤醒</string>
    <string name="connect_band">请按下手环按钮，连接手环</string>
    <string name="clock_notice1">允许闹钟在目标唤醒时间之前30分钟内讲我从浅度睡眠中唤醒，让我更轻松的起床。</string>
    <string name="clock_week">闹钟周期</string>
    <string name="little_notice">小提示</string>
    <string name="notice2">闹钟震动过程中，按一下手环即可停止震动。</string>
    <string name="clock_delete">删除</string>
    <string name="come_call_notice">来电提醒</string>
    <string name="come_message_notice">震动一次通知提醒</string>
    <string name="come_message_notice_2">短信提醒</string>
    <string name="sleep_first">睡眠</string>
    <string name="pk_first">PK</string>
    <string name="about_tittle">关于</string>
    <string name="let_us_comparer">让我们比一比</string>
    <string name="how_to_pk">怎么PK?</string>
    <string name="pk_answer">PK是与好友比拼步数，只需点击“+”选择比赛时长即可开始PK</string>
    <string name="how_to_success">怎么取胜？</string>
    <string name="success_answer">比赛规定时间内，比对手走更多步数即可开始PK</string>
    <string name="look_others_walk">别人是否能看到我的步数？</string>
    <string name="others_walk_answer">在创建对决时选择公开PK时况，则所有好友能看到你的PK时况，选择关闭表示仅对对决双方可见</string>
    <string name="pk_select">选择好友，选定时长</string>
    <string name="inviactionDuel">邀请对决</string>
    <string name="duel_select">选择对手</string>
    <string name="select_data_ravil">选择时长（天）</string>
    <string name="tv_pk_fifa">PK时况</string>
    <string name="select_duel">选择对手</string>
    <string name="pk_how">怎么PK？</string>
    <string name="pk_help_answer1">PK是与好友比拼步数，只需点击“+”选择比赛时长即可开始PK</string>
    <string name="pk_help_ask2">怎么取胜？</string>
    <string name="pk_help_answer2">比赛规定时间内，比对手行走更多步数即可取胜</string>
    <string name="pk_help_ask3">别人是否能看到我的步数？</string>
    <string name="pk_help_answer3">在创建对决时选择公开PK时况，则所有好友能看到你的PK时况，选择关闭表示仅对决双方可见</string>
    <string name="pull_refrsh__list_pk_state_button_text">接受</string>
    <string name="pull_refrsh__list_pk_state_quxiao_button_text">撤销</string>
    <string name="pull_refrsh__list_pk_state_complete_button_text">再战</string>
    <string name="myselef_state">我</string>
    <string name="pk_time">PK时长</string>
    <string name="pk_time_yu">剩余时间</string>
    <string name="text_hour">时</string>
    <string name="text_minute">分钟</string>
    <string name="text_day">天</string>
    <string name="getuserinfo_fail">请求用户信息失败</string>
    <string name="actor">优</string>
    <string name="good">良</string>
    <string name="mild_contamination">轻度污染</string>
    <string name="Hazardous">重度污染</string>
    <string name="Medium_pollution">中度污染</string>
    <string name="slightly_polluted">轻度污染</string>
    <string name="whetherquality">空气：</string>
    <string name="contantperson">联系人</string>
    <string name="old">年龄</string>
    <string name="city">城市</string>
    <string name="mingchen">名称</string>
    <string name="hight">身高</string>
    <string name="weight">体重</string>
    <string name="birhtday">生日</string>
    <string name="steps">计步</string>
    <string name="hint_input_nickname">请输入昵称</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="ok">确认</string>
    <string name="edit_success">修改成功</string>
    <string name="input_address">请输入城市</string>
    <string name="edit_address">修改城市</string>
    <string name="nodata">暂无数据</string>

    <string name="hasselect">已选择</string>
    <string name="album">  相册</string>
    <string name="take_a_picture">  拍照</string>

    <string name="xiyi">使用条款和隐私协议</string>
    <string name="banquan">豚鼠科技 版权所有</string>
    <string name="copyright_2014_2016_cavytech">Copyright © 2014-2016 CavyTech</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="v1_0_0">当前版本 V1.0.0</string>

    <string name="step_cont">步数</string>
    <string name="wait_answer">待回应</string>
    <string name="going">进行中</string>
    <string name="complete">已完成</string>
    <string name="start_pk">发起PK</string>
    <string name="chart_steps">步数</string>
    <string name="chart_journey">路程</string>
    <string name="chart_target">目标完成度</string>
    <string name="chart_time">用时</string>
    <string name="maxinput">最多为%d个汉字</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_hint">请描述你的问题或意见（3-200个字）</string>
    <string name="sleep_quality">周睡眠指数</string>
    <string name="long_sleep">深度睡眠</string>
    <string name="short_sleep">浅度睡眠</string>
    <string name="average_sleep">目标完成度</string>
    <string name="going_pk">正在进行</string>
    <string name="pk_finish">已完成</string>
    <string name="Sbeizhu">设置备注</string>
    <string name="exnicheng">点击修改昵称</string>
    <string name="show">点击查看</string>
    <string name="beizhu">输入备注名</string>
    <string name="queding">确定</string>
    <string name="chengjiu">成就</string>
    <string name="jinji">紧急联系人</string>
    <string name="gps">GPS定位</string>
    <string name="tianjia">点击添加</string>
    <string name="quxiao">取消</string>
    <string name="MSG_AUTH_CODE_ERR">验证码不正确</string>
    <string name="MSG_ACCOUNT_IS_EXIST">该账号已被注册，是否前往登录</string>
    <string name="ALERT_DLG_BTN_OK">确定</string>
    <string name="ALERT_DLG_BTN_CANCEL">取消</string>
    <string name="CAVY_VIP">豚鼠会员</string>
    <string name="step_pk">计步成就</string>
    <string name="guild_safe">安全服务</string>
    <string name="app_name_wear">豚鼠生活</string>
    <string name="step_single">步</string>
    <string name="killmeter">km</string>
    <string name="avarge_sleep">日均睡眠</string>
    <string name="man">男</string>
    <string name="sex_user">性别</string>
    <string name="not_login">登录失效，请重新登录</string>
    <string name="safety_1">遇到紧急情况，连按四下按钮</string>
    <string name="safety_2">立即向联系人发送求救信息</string>
    <string name="call_1">来电提醒</string>
    <string name="call_2">来电振动提醒，不漏接一个重要来电</string>
    <string name="step_achieve">让走路成为一种乐趣</string>
    <string name="cavy_band">豚鼠手环</string>
    <string name="cavy_band1">开启我的豚鼠生活</string>
    <string name="cavy_band_3">我的豚鼠手环</string>
    <string name="security_1">温馨提示</string>
    <string name="security_2">紧急情况下，连续按4下按钮，紧急联系人即可收到豚鼠为您发送的请求信息及GPS定位消息。</string>
    <string name="nicheng">编辑昵称</string>
    <string name="bind_new_bracelets_bracelets">是否确定要绑定新的手环？该操作将会解除与当前豚鼠手环的绑定。</string>


</resources>
