<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_titlebar2"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toobar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <RelativeLayout
            android:id="@+id/rl_keow_click"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/corners_bg"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_click_time_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gps"
                        style="@style/e14" />

                </LinearLayout>

            </LinearLayout>

            <com.cavytech.widget.SwitchButtonEx
                android:id="@+id/sbe_clock_item"
                android:layout_width="50dp"
                android:layout_height="26dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="10dp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:background="@drawable/corners_bg">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/ls_know_clock"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:layout_centerVertical="true"
            android:text="@string/jinji"
            style="@style/e14" />

        <ListView
            android:id="@+id/ls_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv"
            android:layout_marginBottom="10dp"
            android:divider="@color/white" />

        <Button
            android:id="@+id/tv_security_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ls_security"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:text="@string/tianjia"
            android:clickable="false"
            android:layout_alignTop="@+id/tv"
            android:background="@color/transparent"
            style="@style/g14" />


    </RelativeLayout>


    <TextView
        android:id="@+id/tv_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@color/com_titlebar2"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="@string/security_1"
        style="@style/a14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/com_titlebar2"
        android:layout_gravity="left"
        android:layout_marginLeft="30dp"
        android:text="@string/security_2"
        android:layout_marginRight="15dp"
        style="@style/a12" />

</LinearLayout>
